alignment issues solved

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,6 +213,7 @@
   background: radial-gradient(rgba(var(--bg-rgb-1), 0.200), rgba(var(--bg-rgb-2), 0.900));
   background-position: center;
   background-repeat: no-repeat;
+  margin-top: -2.4em;
 }
 
 .bg-video {
